--- a/BFF-5-Examples/2-apollo-server/package.json
+++ b/BFF-5-Examples/2-apollo-server/package.json
@@ -8,7 +8,10 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "@apollo/datasource-rest": "^6.4.1",
     "@apollo/server": "^4.12.2",
-    "graphql": "^16.11.0"
-  }
+    "graphql": "^16.11.0",
+    "graphql-modules": "^3.0.0"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
